--- a/src/main/resources/templates/mail.html
+++ b/src/main/resources/templates/mail.html
@@ -1,14 +1,8 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
-<div style="border: 3px solid red; margin-left: 20%; margin-right: 20%; margin-top: 10%">
-    <div style="margin: 10%; text-align: center">
-        <p th:text="${subject}">${title}</p>
-    </div>
+<div style="border: 3px solid gray; margin-left: 20%; margin-right: 20%; margin-top: 10%">
     <div style="margin: 10%; text-align: center">
         <p th:text="${text}">${text}</p>
-    </div>
-    <div style="margin: 10%; text-align: center">
-        <p th:text="${from}">${from}</p>
     </div>
 </div>
 </html>
