--- a/src/main/resources/templates/mail.html
+++ b/src/main/resources/templates/mail.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
-<div style="border: 3px solid gray; margin-left: 20%; margin-right: 20%; margin-top: 10%">
+<div style="border: 3px solid gray; margin-left: 20%; margin-right: 20%; margin-top: 10%; margin-bottom: 10%">
     <div style="margin: 10%; text-align: center">
         <p th:text="${text}">${text}</p>
     </div>
